--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
 
     //placeholderview
-    implementation 'com.mindorks.android:placeholderview:1.0.3'
+    /*implementation 'com.mindorks.android:placeholderview:1.0.3'
     annotationProcessor 'com.mindorks.android:placeholderview-compiler:1.0.3'
 
-    implementation 'com.android.support:cardview-v7:+'
+    implementation 'com.android.support:cardview-v7:+'*/
+
+    implementation 'com.mindorks:placeholderview:0.7.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.code.gson:gson:2.7'
 }
